# summary-article

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  backend.txt  backend.xml  pyproject.toml
backend/app/: crud.py  main.py  main.py~  models.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: articles.py  root.py  scheduler.py
backend/app/core/: config.py  config.py~  database.py  error_handles.py  error_handles.py~  scheduler.py  scraper.py  summarizer.py
backend/logs/: error.log~
draft/: full_scrap.py  scrapping.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: config.ts
frontend/src/api/services/: articlesService.ts  healthService.ts  index.ts
frontend/src/components/ErrorBoundary/: index.tsx
frontend/src/components/ListNewsCard/: index.tsx
frontend/src/components/LoadingFallback/: index.tsx
frontend/src/components/Logo/: index.tsx
frontend/src/components/Navbar/: index.tsx
frontend/src/components/NewsCard/: NewsSkeleton.tsx  index.tsx
frontend/src/components/Search/: index.tsx
frontend/src/components/TopBar/: index.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/About/: index.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/pages/NotFound/: index.tsx
frontend/src/routes/: index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
