[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lan123456ok", email = "bachomuonnam123@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.6",
    "fastapi-pagination>=0.12.34",
    "google-generativeai>=0.8.3",
    "html5lib>=1.1",
    "motor>=3.6.0",
    "pydantic-settings>=2.7.1",
    "pymongo>=4.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.5",
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
]

[tool.rye.scripts]
serve = "uvicorn app.main:app --reload"
